--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
  body {
-    background-color: #001F3F; /* Dark blue background */
-    color: #ADD8E6; /* Light blue text */
+    background-color: #001F3F;
+    color: #ADD8E6;
     font-family: Arial, sans-serif;
     padding: 20px;
 }
@@ -54,3 +54,12 @@ header {
     background-color: #00FF00;
     color: #000;
     padding: 10px;
+    border-radius: 10px;
+}
+
+.status-inactive {
+    background-color: #FF0000;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+}
